--- a/styles/sitemanagement/pelatihan.css
+++ b/styles/sitemanagement/pelatihan.css
@@ -388,7 +388,7 @@
   }
   .data-daerah-provinsi {
     width: 120px;
-    margin-right: 40px;
+    /* margin-right: 40px; */
   }
 }
 
@@ -427,7 +427,7 @@
   /* DASHBOARD Site Management */
   .data-daerah-provinsi{
     width: 200px;
-    margin-right: 280px;
+    /* margin-right: 280px; */
   }
   .cardDataPeserta{
     width: 100%;
@@ -441,7 +441,7 @@
   .data-daerah-provinsi {
     width: 100px;
     font-size: 12px;
-    margin-right: 8px;
+    /* margin-right: 8px; */
   }
   .total-peserta{
     font-size: 12px;
@@ -497,9 +497,9 @@
     font-size: 10px;
   }
   .data-daerah-provinsi {
-    width: 80px;
+    width: 70px;
     font-size: 10px;
-    margin-right: 8px;
+    /* margin-right: 8px; */
   }
   .nomor{
     font-size: 10px;
