notification peserta | admin

--- a/styles/homepage/landingpage.css
+++ b/styles/homepage/landingpage.css
@@ -204,7 +204,7 @@
 /* STEP REGISTER */
 .title-step-register h1 {
   font-weight: 600;
-  font-size: 40px;
+  font-size: 28px;
   line-height: 140%;
   text-align: center;
   color: #1f1f1f;
@@ -391,6 +391,9 @@
     font-weight: 600;
     color: #6c6c6c;
     text-align: start;
+  }
+  .title-step-register h1 {
+    font-size: 40px;
   }
 
   .penyelenggara-title-filter h1 {
