--- a/styles/homepage/landingpage.css
+++ b/styles/homepage/landingpage.css
@@ -359,6 +359,21 @@
   background-color: #5ec8f2;
 }
 
+.module-rilis-media {
+  width: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  line-height: normal;
+}
+
+.media-card {
+  color: #1b283f;
+  font-weight: 600;
+  font-size: 18px;
+}
+
 @media (max-width: 395px) {
   .penyelenggara-mitra .penyelenggara-wrapper {
     width: 130px;
@@ -501,6 +516,21 @@
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   line-height: 25px;
+}
+
+.module-rilis-media {
+  width: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+  line-height: normal;
+}
+
+.media-card {
+  color: #1b283f;
+  font-weight: 600;
+  font-size: 18px;
 }
 
 .title-tahapan-new {
