--- a/user-component-new/components/template/Navbar.module.css
+++ b/user-component-new/components/template/Navbar.module.css
@@ -40,3 +40,15 @@
   color: white;
   width: 100%;
 }
+
+.scrollbar_navbar::-webkit-scrollbar {
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+.scrollbar_navbar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+  background-color: #007cff;
+}
