--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,10 @@ a {
   font-weight: 500 !important;
 }
 
+.cursor-notallowed {
+  cursor: not-allowed;
+}
+
 /* Pagination */
 .page-item {
   width: 33px;
