--- a/styles/homepage/landingpage.css
+++ b/styles/homepage/landingpage.css
@@ -348,15 +348,15 @@
 }
 
 .color-extras-primary {
-  background-color: #0100be;
+  color: #0100be;
 }
 
 .color-extras-secondary {
-  background-color: #2a62ed;
+  color: #2a62ed;
 }
 
 .color-extras-extras {
-  background-color: #5ec8f2;
+  color: #5ec8f2;
 }
 
 .module-rilis-media {
