--- a/components/content/subvit/substansi/listSubstansi.module.css
+++ b/components/content/subvit/substansi/listSubstansi.module.css
@@ -37,3 +37,23 @@
 .space {
   padding: 0px 28px;
 }
+.btnNext {
+  background-color: white !important;
+  border: white;
+  margin-left: 55px;
+}
+.answer {
+  border-radius: 8px;
+  padding: 14px;
+  cursor: pointer;
+  margin-bottom: 10px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 160%;
+  background: #e6f2ff;
+
+  /* border: 2px solid #007cff; */
+  box-sizing: border-box;
+}
