--- a/user-component-new/content/home/detail-artikel/detail-artikel.module.css
+++ b/user-component-new/content/home/detail-artikel/detail-artikel.module.css
@@ -7,6 +7,12 @@
     font-family: "Poppins";
 }
 
+.image_thumbnail {
+    position: relative;
+    width: 100%;
+    height: 837px;
+}
+
 @media only screen and (max-width: 1024px){
     .fontTitle{
         font-size: 40px;
@@ -17,11 +23,23 @@
     .fontTitle{
         font-size: 32px;
     }
+
+    .image_thumbnail {
+        position: relative;
+        width: 100%;
+        height: 704px;
+    }
 }
 
 @media only screen and (max-width: 576px){
     .fontTitle{
         font-size: 32px;
+    }
+
+    .image_thumbnail {
+        position: relative;
+        width: 100%;
+        height: 361px;
     }
 }
 
