--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,93 +4,93 @@
 
 html,
 body {
-  scroll-behavior: "smooth";
-  padding: 0;
-  margin: 0;
-  font-weight: 400 !important;
-  font-family: -apple-system, Poppins, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+	scroll-behavior: "smooth";
+	padding: 0;
+	margin: 0;
+	font-weight: 400 !important;
+	font-family: -apple-system, Poppins, BlinkMacSystemFont, Segoe UI, Roboto,
+		Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+	color: inherit;
+	text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 .aside-menu .menu-nav > .menu-item > .menu-heading .menu-text,
 .aside-menu .menu-nav > .menu-item > .menu-link .menu-text {
-  font-weight: 500 !important;
+	font-weight: 500 !important;
 }
 
 .cursor-notallowed {
-  cursor: not-allowed;
+	cursor: not-allowed;
 }
 
 /* Pagination */
 .page-item {
-  width: 33px;
-  height: 30px;
-  margin-right: 10px;
-  text-align: center;
+	width: 33px;
+	height: 30px;
+	margin-right: 10px;
+	text-align: center;
 }
 
 .page-item:last-child,
 .page-item:first-child {
-  width: 40px;
+	width: 40px;
 }
 
 .page-link {
-  border-radius: 6px;
-  background: #f3f6f9;
-  border-color: #f3f6f9;
+	border-radius: 6px;
+	background: #f3f6f9;
+	border-color: #f3f6f9;
 }
 
 .page-item.active .page-link {
-  background-color: #215480;
-  border-color: #215480;
+	background-color: #215480;
+	border-color: #215480;
 }
 
 .page-link {
-  color: #9e9e9e;
+	color: #9e9e9e;
 }
 
 .page-link:hover {
-  color: #9e9e9e;
+	color: #9e9e9e;
 }
 
 .page-item-dashboard {
-  width: 33px;
-  height: 30px;
-  margin-right: 10px;
-  text-align: center;
+	width: 33px;
+	height: 30px;
+	margin-right: 10px;
+	text-align: center;
 }
 
 .page-item-dashboard:last-child,
 .page-item-dashboard:first-child {
-  width: 40px;
+	width: 40px;
 }
 
 .page-link-dashboard {
-  border-radius: 6px;
-  background: #f3f6f9;
-  border-color: #f3f6f9;
+	border-radius: 6px;
+	background: #f3f6f9;
+	border-color: #f3f6f9;
 }
 
 .page-item-dashboard.active .page-link-dashboard {
-  background-color: #0063cc;
-  border-color: #0063cc;
+	background-color: #007cff;
+	border-color: #007cff;
 }
 
 .page-link-dashboard {
-  color: #9e9e9e;
+	color: #9e9e9e;
 }
 
 .page-link-dashboard:hover {
-  color: #9e9e9e;
+	color: #9e9e9e;
 }
 
 /* .form-control { */
@@ -99,530 +99,530 @@ a {
 /* } */
 
 .rti--container {
-  background: #ffffff !important;
-  --rti-border: #d7e1ea !important;
-  --rti-main: "#ffffff";
-  --rti-radius: 1.375rem;
-  --rti-s: 0.5rem 0.5rem 0.5rem 2.3rem;
-  /* spacing */
-  --rti-tag: "#d7e1ea";
-  --rti-tag-remove: "#e53e3e";
+	background: #ffffff !important;
+	--rti-border: #d7e1ea !important;
+	--rti-main: "#ffffff";
+	--rti-radius: 1.375rem;
+	--rti-s: 0.5rem 0.5rem 0.5rem 2.3rem;
+	/* spacing */
+	--rti-tag: "#d7e1ea";
+	--rti-tag-remove: "#e53e3e";
 }
 
 .rti--input {
-  background: #ffffff !important;
+	background: #ffffff !important;
 }
 
 .rti--tag {
-  background: #d7e1ea !important;
+	background: #d7e1ea !important;
 }
 
 .form-control-auth {
-  /* background: #ffffff !important; */
-  border-radius: 10px;
-  height: 46px;
-  /* width: 400px; */
+	/* background: #ffffff !important; */
+	border-radius: 10px;
+	height: 46px;
+	/* width: 400px; */
 }
 
 .form-auth-label {
-  color: #ffffff !important;
-  font-size: 16px;
-  font-weight: 400 !important;
-  line-height: 25px !important;
+	color: #ffffff !important;
+	font-size: 16px;
+	font-weight: 400 !important;
+	line-height: 25px !important;
 }
 
 .form-search-date {
-  background: #ffffff !important;
-  border: 1px solid #d9d9d9 !important;
+	background: #ffffff !important;
+	border: 1px solid #d9d9d9 !important;
 }
 
 .bg-accent-info {
-  background-color: #f4e1f0;
+	background-color: #f4e1f0;
 }
 
 .input-group-text {
-  background: #d6d6e0;
-  color: #80808f;
+	background: #d6d6e0;
+	color: #80808f;
 }
 
 .soal-image {
-  object-fit: cover;
+	object-fit: cover;
 }
 
 .circle-bottom {
-  background: #ffffff;
-  box-shadow: 0px 0px 12px rgb(31 31 31 / 10%);
-  border-radius: 16px;
-  width: 32px;
-  height: 32px;
-  position: absolute;
-  right: -16px;
-  bottom: -5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
+	background: #ffffff;
+	box-shadow: 0px 0px 12px rgb(31 31 31 / 10%);
+	border-radius: 16px;
+	width: 32px;
+	height: 32px;
+	position: absolute;
+	right: -16px;
+	bottom: -5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
 }
 
 .circle-top {
-  background: #ffffff;
-  box-shadow: 0px 0px 12px rgb(31 31 31 / 10%);
-  border-radius: 16px;
-  width: 32px;
-  height: 32px;
-  position: absolute;
-  right: -16px;
-  top: -15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
+	background: #ffffff;
+	box-shadow: 0px 0px 12px rgb(31 31 31 / 10%);
+	border-radius: 16px;
+	width: 32px;
+	height: 32px;
+	position: absolute;
+	right: -16px;
+	top: -15px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	cursor: pointer;
 }
 
 .ck-editor__editable {
-  max-height: 200px;
+	max-height: 200px;
 }
 
 .wrapper-preview {
-  min-height: 100%;
-  position: absolute;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
+	min-height: 100%;
+	position: absolute;
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .content-preview {
-  padding-bottom: 400px;
-  width: 100%;
+	padding-bottom: 400px;
+	width: 100%;
 }
 
 .footer-preview {
-  position: absolute;
-  width: 100%;
-  bottom: 0;
-  left: 0;
-  height: 400px;
+	position: absolute;
+	width: 100%;
+	bottom: 0;
+	left: 0;
+	height: 400px;
 }
 
 @media only screen and (max-width: 768px) {
-  .ilustrator-dashboard {
-    visibility: hidden;
-    display: none;
-  }
+	.ilustrator-dashboard {
+		visibility: hidden;
+		display: none;
+	}
 
-  .capcha {
-    margin-bottom: 30px;
-  }
+	.capcha {
+		margin-bottom: 30px;
+	}
 }
 
 /* --------------------------------pembatas-------------- */
 .pageNumbers {
-  list-style: none;
-  display: flex;
+	list-style: none;
+	display: flex;
 }
 
 .pageNumbers li {
-  padding: 10px;
-  border: 1px solid white;
-  cursor: pointer;
+	padding: 10px;
+	border: 1px solid white;
+	cursor: pointer;
 }
 
 .pageNumbers li.active {
-  background-color: white;
-  color: black;
+	background-color: white;
+	color: black;
 }
 
 .pageNumbers li button {
-  background-color: transparent;
-  border: none;
-  color: white;
-  font-size: 1.5rem;
-  cursor: pointer;
+	background-color: transparent;
+	border: none;
+	color: white;
+	font-size: 1.5rem;
+	cursor: pointer;
 }
 
 .pageNumbers li button:hover {
-  background-color: white;
-  color: black;
+	background-color: white;
+	color: black;
 }
 
 .pageNumbers li button:focus {
-  outline: none;
+	outline: none;
 }
 
 .loadmore {
-  padding: 1rem;
-  background-color: transparent;
+	padding: 1rem;
+	background-color: transparent;
 
-  color: white;
-  font-size: 1.2rem;
-  border: 1px solid white;
-  cursor: pointer;
+	color: white;
+	font-size: 1.2rem;
+	border: 1px solid white;
+	cursor: pointer;
 }
 
 .datepicker {
-  width: 100%;
+	width: 100%;
 }
 
 .cursor-not-allowed {
-  cursor: not-allowed !important;
+	cursor: not-allowed !important;
 }
 
 .wrapper-chart-pie,
 .wrapper-chart-pie .recharts-wrapper,
 .wrapper-chart-pie .recharts-wrapper .recharts-surface {
-  width: 100% !important;
-  position: relative;
+	width: 100% !important;
+	position: relative;
 }
 
 .disabled-form input {
-  background-color: transparent !important;
-  border: none !important;
+	background-color: transparent !important;
+	border: none !important;
 }
 
 .minimal-image img {
-  min-width: 16px;
-  width: 16px;
-  min-height: 16px;
-  height: 16px;
+	min-width: 16px;
+	width: 16px;
+	min-height: 16px;
+	height: 16px;
 }
 
 .select-pelatihan {
-  border: none;
-  border-radius: 4px;
-  padding: 4px 8px;
+	border: none;
+	border-radius: 4px;
+	padding: 4px 8px;
 }
 
 .select-pelatihan-success {
-  color: #04aa77;
-  background: #e6f7f1;
+	color: #04aa77;
+	background: #e6f7f1;
 }
 
 .select-pelatihan-danger {
-  color: #ee2d41;
-  background: #fdeaec;
+	color: #ee2d41;
+	background: #fdeaec;
 }
 
 .select-pelatihan-warning {
-  color: #ffa800;
-  background: #fff7e6;
+	color: #ffa800;
+	background: #fff7e6;
 }
 
 .box-hide-arrow {
-  position: absolute;
-  height: 77%;
-  width: 3rem;
-  right: 4px;
-  top: 50%;
-  background-color: white;
-  transform: translateY(-50%);
+	position: absolute;
+	height: 77%;
+	width: 3rem;
+	right: 4px;
+	top: 50%;
+	background-color: white;
+	transform: translateY(-50%);
 }
 
 .not-found-page {
-  position: fixed;
-  inset: 0;
-  background-color: white;
-  z-index: 9999;
+	position: fixed;
+	inset: 0;
+	background-color: white;
+	z-index: 9999;
 }
 
 .img-carousel {
-  border-radius: 5px;
+	border-radius: 5px;
 }
 
 .slick-list {
-  margin: 0 -10px;
+	margin: 0 -10px;
 }
 
 .slick-slide {
-  padding: 0 5px;
+	padding: 0 5px;
 }
 
 .splide-beranda-new {
-  height: 64px;
+	height: 64px;
 }
 
 .slick-list button .slick-arrow .slick-next {
-  display: none !important;
+	display: none !important;
 }
 
 .slick-dots li.slick-active .dot {
-  background: #007cff !important;
-  width: 16px !important;
+	background: #007cff !important;
+	width: 16px !important;
 }
 
 .slick-dots li.slick-active {
-  margin-right: 2px !important;
+	margin-right: 2px !important;
 }
 
 .slick-dots li {
-  margin-right: 0px !important;
+	margin-right: 0px !important;
 }
 
 p > img {
-  width: 85%;
-  margin-left: 55px;
+	width: 85%;
+	margin-left: 55px;
 }
 
 .style-quill-margin {
-  margin-top: 150px;
+	margin-top: 150px;
 }
 
 @media screen and (max-width: 576px) {
-  .responsive-columns {
-    justify-content: center !important;
-  }
+	.responsive-columns {
+		justify-content: center !important;
+	}
 }
 
 @media screen and (min-width: 700px) {
-  .style-quill-margin {
-    margin-top: 70px !important;
-  }
+	.style-quill-margin {
+		margin-top: 70px !important;
+	}
 }
 
 @media screen and (min-width: 600px) {
-  .splide-beranda-new {
-    height: 70px;
-  }
+	.splide-beranda-new {
+		height: 70px;
+	}
 
-  .img-carousel {
-    border-radius: 16px;
-  }
-  .slick-slide {
-    padding: 0 10px;
-  }
+	.img-carousel {
+		border-radius: 16px;
+	}
+	.slick-slide {
+		padding: 0 10px;
+	}
 }
 
 @media screen and (max-width: 575px) {
-  .g-recaptcha {
-    transform: scale(0.77);
-    -webkit-transform: scale(0.77);
-    transform-origin: 0 0;
-    -webkit-transform-origin: 0 0;
-  }
+	.g-recaptcha {
+		transform: scale(0.77);
+		-webkit-transform: scale(0.77);
+		transform-origin: 0 0;
+		-webkit-transform-origin: 0 0;
+	}
 }
 
 @media screen and (max-width: 300px) {
-  .g-recaptcha {
-    transform: scale(0.55);
-    -webkit-transform: scale(0.55);
-    transform-origin: 0 0;
-    -webkit-transform-origin: 0 0;
-  }
+	.g-recaptcha {
+		transform: scale(0.55);
+		-webkit-transform: scale(0.55);
+		transform-origin: 0 0;
+		-webkit-transform-origin: 0 0;
+	}
 }
 
 @-moz-document url-prefix() {
-  .row-aksi-pelatihan {
-    width: 300px;
-  }
-  .row-aksi-tema {
-    width: 100px;
-  }
+	.row-aksi-pelatihan {
+		width: 300px;
+	}
+	.row-aksi-tema {
+		width: 100px;
+	}
 }
 
 .quiz_title {
-  font-size: 30px;
-  font-weight: 700;
-  color: #292d3f;
-  text-align: center;
-  margin-bottom: 50px;
+	font-size: 30px;
+	font-weight: 700;
+	color: #292d3f;
+	text-align: center;
+	margin-bottom: 50px;
 }
 
 .quiz_card_area {
-  position: relative;
-  margin-bottom: 30px;
+	position: relative;
+	margin-bottom: 30px;
 }
 .single_quiz_card {
-  background: #ffffff;
-  cursor: pointer;
-  border: 1px solid #d7e1ea;
-  box-sizing: border-box;
-  border-radius: 8px;
-  padding: 10px;
-  cursor: pointer;
-  margin-bottom: 10px;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 160%;
+	background: #ffffff;
+	cursor: pointer;
+	border: 1px solid #d7e1ea;
+	box-sizing: border-box;
+	border-radius: 8px;
+	padding: 10px;
+	cursor: pointer;
+	margin-bottom: 10px;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 12px;
+	line-height: 160%;
 
-  color: #1f1f1f;
+	color: #1f1f1f;
 }
 .single_quiz_card:hover {
-  background: #e6f2ff;
+	background: #e6f2ff;
 
-  border: 1px solid #007cff;
-  box-sizing: border-box;
-  border-radius: 8px;
+	border: 1px solid #007cff;
+	box-sizing: border-box;
+	border-radius: 8px;
 }
 .quiz_card_title {
-  padding: 0px;
+	padding: 0px;
 
-  /* background-color: #d6d6d6; */
+	/* background-color: #d6d6d6; */
 }
 .quiz_card_title h3 {
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  font-weight: 400;
-  color: #292d3f;
-  margin-bottom: 0;
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  -ms-transition: all 0.3s linear;
-  -khtml-transition: all 0.3s linear;
-  transition: all 0.3s linear;
+	font-family: Poppins;
+	font-style: normal;
+	font-weight: normal;
+	font-size: 16px;
+	font-weight: 400;
+	color: #292d3f;
+	margin-bottom: 0;
+	-webkit-transition: all 0.3s linear;
+	-moz-transition: all 0.3s linear;
+	-o-transition: all 0.3s linear;
+	-ms-transition: all 0.3s linear;
+	-khtml-transition: all 0.3s linear;
+	transition: all 0.3s linear;
 }
 .quiz_card_title h3 i {
-  opacity: 0;
+	opacity: 0;
 }
 .quiz_card_icon {
-  max-width: 100%;
-  min-height: 135px;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+	max-width: 100%;
+	min-height: 135px;
+	text-align: center;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 .quiz_icon {
-  width: 70px;
-  height: 75px;
-  position: relative;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: auto;
-  -webkit-transition: all 0.3s linear;
-  -moz-transition: all 0.3s linear;
-  -o-transition: all 0.3s linear;
-  -ms-transition: all 0.3s linear;
-  -khtml-transition: all 0.3s linear;
-  transition: all 0.3s linear;
+	width: 70px;
+	height: 75px;
+	position: relative;
+	background-position: center center;
+	background-repeat: no-repeat;
+	background-size: auto;
+	-webkit-transition: all 0.3s linear;
+	-moz-transition: all 0.3s linear;
+	-o-transition: all 0.3s linear;
+	-ms-transition: all 0.3s linear;
+	-khtml-transition: all 0.3s linear;
+	transition: all 0.3s linear;
 }
 
 .quiz_checkbox {
-  position: absolute;
-  top: 0;
-  left: 0;
-  opacity: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  cursor: pointer;
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 999;
+	cursor: pointer;
 }
 .quiz_checkbox:checked ~ .single_quiz_card {
-  background-color: #e6f2ff;
+	background-color: #e6f2ff;
 }
 .quiz_checkbox:checked:hover ~ .single_quiz_card {
-  background-color: #e6f2ff;
+	background-color: #e6f2ff;
 }
 
 .quiz_checkbox:checked ~ .single_quiz_card .quiz_card_content .quiz_card_title {
-  background-color: #e6f2ff;
-  color: #000;
+	background-color: #e6f2ff;
+	color: #000;
 }
 .quiz_checkbox:checked
-  ~ .single_quiz_card
-  .quiz_card_content
-  .quiz_card_title
-  h3 {
-  color: #000;
+	~ .single_quiz_card
+	.quiz_card_content
+	.quiz_card_title
+	h3 {
+	color: #000;
 }
 .quiz_checkbox:checked
-  ~ .single_quiz_card
-  .quiz_card_content
-  .quiz_card_title
-  h3
-  i {
-  opacity: 1;
+	~ .single_quiz_card
+	.quiz_card_content
+	.quiz_card_title
+	h3
+	i {
+	opacity: 1;
 }
 .quiz_checkbox:checked:hover ~ .quiz_card_title {
-  border: 1px solid #2575fc;
+	border: 1px solid #2575fc;
 }
 
 /*Icon Selector*/
 
 .quiz_checkbox:checked ~ .single_quiz_card .quiz_card_content .quiz_card_icon {
-  color: #2575fc;
+	color: #2575fc;
 }
 .quiz_checkbox:checked
-  ~ .single_quiz_card
-  .quiz_card_content
-  .quiz_card_icon
-  .quiz_icon1 {
-  background-image: url("https://img.icons8.com/nolan/32/000000/maxcdn.png");
+	~ .single_quiz_card
+	.quiz_card_content
+	.quiz_card_icon
+	.quiz_icon1 {
+	background-image: url("https://img.icons8.com/nolan/32/000000/maxcdn.png");
 }
 .quiz_checkbox:checked
-  ~ .single_quiz_card
-  .quiz_card_content
-  .quiz_card_icon
-  .quiz_icon2 {
-  background-image: url("https://img.icons8.com/color/48/000000/download-2.png");
+	~ .single_quiz_card
+	.quiz_card_content
+	.quiz_card_icon
+	.quiz_icon2 {
+	background-image: url("https://img.icons8.com/color/48/000000/download-2.png");
 }
 .quiz_checkbox:checked
-  ~ .single_quiz_card
-  .quiz_card_content
-  .quiz_card_icon
-  .quiz_icon3 {
-  background-image: url("https://img.icons8.com/color/48/000000/cloudflare.png");
+	~ .single_quiz_card
+	.quiz_card_content
+	.quiz_card_icon
+	.quiz_icon3 {
+	background-image: url("https://img.icons8.com/color/48/000000/cloudflare.png");
 }
 .quiz_checkbox:checked
-  ~ .single_quiz_card
-  .quiz_card_content
-  .quiz_card_icon
-  .quiz_icon4 {
-  background-image: url("https://img.icons8.com/material-outlined/80/000000/download-2.png");
+	~ .single_quiz_card
+	.quiz_card_content
+	.quiz_card_icon
+	.quiz_icon4 {
+	background-image: url("https://img.icons8.com/material-outlined/80/000000/download-2.png");
 }
 
 .quiz_card_icon {
-  font-size: 50px;
-  color: #000000;
+	font-size: 50px;
+	color: #000000;
 }
 
 .quiz_backBtn_progressBar {
-  position: relative;
-  margin-bottom: 60px;
+	position: relative;
+	margin-bottom: 60px;
 }
 .quiz_backBtn {
-  background-color: transparent;
-  border: 1px solid #d2d2d3;
-  color: #8e8e8e;
-  border-radius: 50%;
-  position: absolute;
-  top: -17px;
-  left: 0px;
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  vertical-align: middle;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-decoration: none !important;
+	background-color: transparent;
+	border: 1px solid #d2d2d3;
+	color: #8e8e8e;
+	border-radius: 50%;
+	position: absolute;
+	top: -17px;
+	left: 0px;
+	width: 40px;
+	height: 40px;
+	text-align: center;
+	vertical-align: middle;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-decoration: none !important;
 }
 .quiz_backBtn:hover {
-  color: #a9559b;
-  border: 1px solid #2575fc;
+	color: #a9559b;
+	border: 1px solid #2575fc;
 }
 .quiz_backBtn_progressBar .progress {
-  margin-left: 50px;
-  margin-top: 50px;
-  height: 6px;
+	margin-left: 50px;
+	margin-top: 50px;
+	height: 6px;
 }
 .quiz_backBtn_progressBar .progress-bar {
-  background-color: #2575fc;
+	background-color: #2575fc;
 }
 .quiz_next {
-  text-align: center;
-  margin-top: 50px;
+	text-align: center;
+	margin-top: 50px;
 }
 .quiz_continueBtn {
-  max-width: 315px;
-  background-color: #2575fc;
-  color: #ffffff;
-  font-size: 18px;
-  border-radius: 20px;
-  padding: 10px 125px;
-  border: 0;
+	max-width: 315px;
+	background-color: #2575fc;
+	color: #ffffff;
+	font-size: 18px;
+	border-radius: 20px;
+	padding: 10px 125px;
+	border: 0;
 }
