adding qr code in list peserta

--- a/components/content/sertifikat/style.css
+++ b/components/content/sertifikat/style.css
@@ -48,6 +48,11 @@
 	margin-top: 20%;
 }
 
+.responsive-qr-code {
+	margin-top: 35%;
+	margin-left: 82.5%;
+}
+
 .responsive-date-from {
 	margin-top: 37%;
 	left: 63%;
