--- a/user-component-new/content/peserta/wizzard/wizzard.module.css
+++ b/user-component-new/content/peserta/wizzard/wizzard.module.css
@@ -156,3 +156,34 @@
   color: #0063cc;
   font-size: 20px;
 }
+
+
+.bigStepperCircle{
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  background-color: transparent;
+  border-radius: 50%;
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: center;
+  color: #0063cc;
+  border: 2px solid #0063cc;
+}
+
+.bigStepperWrapper{
+  padding: 0px 8vw;
+  position: relative
+}
+
+.bigStepperWrapper::after{
+  content: '';
+  width: 100%;
+  height: 2px;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  background-color: red;
+  margin: auto;
+  z-index: 0;
+}
