--- a/public/assets/css/style.bundle.css
+++ b/public/assets/css/style.bundle.css
@@ -2936,7 +2936,7 @@ pre code {
   border-radius: 10px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
-  background-color: #007cff;
+  background-color: #215480;
 }
 
 .table-responsive > .table-bordered {
