change highlight tag

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,6 +21,11 @@ a {
 	box-sizing: border-box;
 }
 
+mark { 
+    background-color: #007CFF !important;
+    color: black;
+}
+
 .aside-menu .menu-nav > .menu-item > .menu-heading .menu-text,
 .aside-menu .menu-nav > .menu-item > .menu-link .menu-text {
 	font-weight: 500 !important;
