--- a/styles/styleCustomUtilities.css
+++ b/styles/styleCustomUtilities.css
@@ -1,494 +1,503 @@
 .paginate-cs .page-item:last-child .page-link {
-  width: 41px;
+	width: 41px;
 }
 
 .paginate-cs .page-item:first-child .page-link {
-  width: 41px;
+	width: 41px;
 }
 
 .btn-delete:hover .text-hover-show-hapus,
 .btn-edit:hover .text-hover-show-edit {
-  display: block !important;
-  transition: all 1s;
-  opacity: 1;
+	display: block !important;
+	transition: all 1s;
+	opacity: 1;
 }
 
 .scroll-hidden::-webkit-scrollbar {
-  display: none;
+	display: none;
 }
 
 .text-hover-show-hapus,
 .text-hover-show-edit {
-  opacity: 0;
-  position: absolute;
-  bottom: -19px;
-  left: 50%;
-  background-color: white;
-  color: gray;
-  font-size: 10px;
-  border: 1px solid #efefef;
-  padding: 0 8px;
-  border-radius: 3px;
-  transform: translateX(-50%);
+	opacity: 0;
+	position: absolute;
+	bottom: -19px;
+	left: 50%;
+	background-color: white;
+	color: gray;
+	font-size: 10px;
+	border: 1px solid #efefef;
+	padding: 0 8px;
+	border-radius: 3px;
+	transform: translateX(-50%);
 }
 
 .switches {
-  position: relative;
-  display: inline-block;
-  min-width: 44px;
-  min-height: 24px;
+	position: relative;
+	display: inline-block;
+	min-width: 44px;
+	min-height: 24px;
 }
 
 .switches input.checkbox {
-  opacity: 0;
-  width: 0;
-  height: 0;
+	opacity: 0;
+	width: 0;
+	height: 0;
 }
 
 .sliders {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border: 1px solid #8f8f8f;
-  display: flex;
-  justify-content: center;
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: white;
+	-webkit-transition: 0.4s;
+	transition: 0.4s;
+	border: 1px solid #8f8f8f;
+	display: flex;
+	justify-content: center;
 }
 
 .sliders:before {
-  position: absolute;
-  content: "";
-  min-height: 18px;
-  min-width: 18px;
-  left: 5px;
-  bottom: 1.9px;
-  background-color: #8f8f8f;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+	position: absolute;
+	content: "";
+	min-height: 18px;
+	min-width: 18px;
+	left: 5px;
+	bottom: 1.9px;
+	background-color: #8f8f8f;
+	-webkit-transition: 0.4s;
+	transition: 0.4s;
 }
 
 input.checkbox:checked + .sliders {
-  background-color: #215480;
-  border: 1px solid #215480;
+	background-color: #215480;
+	border: 1px solid #215480;
 }
 
 input.checkbox:checked + .sliders:before {
-  background-color: #fff;
-  left: 4px;
-  bottom: 2.6px;
-  height: 17px;
-  min-width: 17px;
+	background-color: #fff;
+	left: 4px;
+	bottom: 2.6px;
+	height: 17px;
+	min-width: 17px;
 }
 
 input.checkbox:focus + .sliders {
-  box-shadow: 0 0 1px #215480;
+	box-shadow: 0 0 1px #215480;
 }
 
 input.checkbox:checked + .sliders:before {
-  -webkit-transform: translateX(18px);
-  -ms-transform: translateX(18px);
-  transform: translateX(18px);
+	-webkit-transform: translateX(18px);
+	-ms-transform: translateX(18px);
+	transform: translateX(18px);
 }
 
 .sliders.round {
-  border-radius: 34px;
+	border-radius: 34px;
 }
 
 .sliders.round:before {
-  border-radius: 50%;
+	border-radius: 50%;
 }
 
 .switches-small {
-  position: relative;
-  display: inline-block;
-  width: 30px;
-  height: 16px;
+	position: relative;
+	display: inline-block;
+	width: 30px;
+	height: 16px;
 }
 
 .switches-small input.checkbox-small {
-  opacity: 0;
-  width: 0;
-  height: 0;
+	opacity: 0;
+	width: 0;
+	height: 0;
 }
 
 .sliders-small {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: white;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
-  border: 1px solid #8f8f8f;
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: white;
+	-webkit-transition: 0.4s;
+	transition: 0.4s;
+	border: 1px solid #8f8f8f;
 }
 
 .sliders-small:before {
-  position: absolute;
-  content: "";
-  height: 11px;
-  width: 11px;
-  left: 2px;
-  bottom: 1.7px;
-  background-color: #8f8f8f;
-  -webkit-transition: 0.4s;
-  transition: 0.4s;
+	position: absolute;
+	content: "";
+	height: 11px;
+	width: 11px;
+	left: 2px;
+	bottom: 1.7px;
+	background-color: #8f8f8f;
+	-webkit-transition: 0.4s;
+	transition: 0.4s;
 }
 
 input.checkbox-small:checked + .sliders-small {
-  background-color: #215480;
-  border: 1px solid #215480;
+	background-color: #215480;
+	border: 1px solid #215480;
 }
 
 input.checkbox-small:checked + .sliders-small:before {
-  background-color: #fff;
-  left: 4px;
-  bottom: 1.7px;
-  height: 11px;
-  width: 11px;
+	background-color: #fff;
+	left: 4px;
+	bottom: 1.7px;
+	height: 11px;
+	width: 11px;
 }
 
 input.checkbox-small:focus + .sliders-small {
-  box-shadow: 0 0 1px #215480;
+	box-shadow: 0 0 1px #215480;
 }
 
 input.checkbox-small:checked + .sliders-small:before {
-  -webkit-transform: translateX(11px);
-  -ms-transform: translateX(11px);
-  transform: translateX(11px);
+	-webkit-transform: translateX(11px);
+	-ms-transform: translateX(11px);
+	transform: translateX(11px);
 }
 
 .sliders-small.round {
-  border-radius: 34px;
+	border-radius: 34px;
 }
 
 .sliders-small.round:before {
-  border-radius: 50%;
+	border-radius: 50%;
 }
 
 .cursor-pointer:hover {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 .p-part-t {
-  font-size: 13px;
-  font-weight: 600;
-  color: gray;
-  margin: 0;
-  text-align: left;
+	font-size: 13px;
+	font-weight: 600;
+	color: gray;
+	margin: 0;
+	text-align: left;
 }
 
 .p-part-d {
-  font-size: 11px;
-  font-weight: 500;
-  color: gray;
-  margin: 0;
-  text-align: center;
+	font-size: 11px;
+	font-weight: 500;
+	color: gray;
+	margin: 0;
+	text-align: center;
 }
 .center-absolute {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 .left-center-absolute {
-  position: absolute;
-  left: 0;
-  top: 50%;
-  transform: translateY(-50%);
+	position: absolute;
+	left: 0;
+	top: 50%;
+	transform: translateY(-50%);
 }
 .left-bottom-absolute {
-  position: absolute;
-  left: 0;
-  bottom: 0;
+	position: absolute;
+	left: 0;
+	bottom: 0;
 }
 .right-center-absolute {
-  position: absolute;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+	position: absolute;
+	right: 0;
+	top: 50%;
+	transform: translateY(-50%);
 }
 .datepicker-w .react-datepicker-wrapper {
-  width: 100%;
+	width: 100%;
 }
 
 .status-div-green {
-  padding: 6px 11px;
-  border-radius: 8px;
-  color: #04aa77;
-  background-color: #e6f7f1;
-  font-weight: 600;
-  font-size: 10px;
+	padding: 6px 11px;
+	border-radius: 8px;
+	color: #04aa77;
+	background-color: #e6f7f1;
+	font-weight: 600;
+	font-size: 10px;
 }
 .status-div-red {
-  padding: 6px 11px;
-  border-radius: 8px;
-  color: #d6293b;
-  background-color: #fdeaec;
-  font-weight: 600;
-  font-size: 10px;
+	padding: 6px 11px;
+	border-radius: 8px;
+	color: #d6293b;
+	background-color: #fdeaec;
+	font-weight: 600;
+	font-size: 10px;
 }
 
 .dropdown-lists {
-  background: white !important;
-  border: 1px solid #d9d9d9 !important;
-  border-radius: 0px !important;
-  color: #acacac !important;
+	background: white !important;
+	border: 1px solid #d9d9d9 !important;
+	border-radius: 0px !important;
+	color: #acacac !important;
 }
 
 .dropdown-arrows-green {
-  background-color: #e6f7f1 !important;
-  color: #04aa77 !important;
-  cursor: pointer;
-  border: none !important;
-  font-weight: 600;
+	background-color: #e6f7f1 !important;
+	color: #04aa77 !important;
+	cursor: pointer;
+	border: none !important;
+	font-weight: 600;
 }
 .dropdown-arrows-yellow {
-  background-color: #fff6e6 !important;
-  color: #e69700 !important;
-  cursor: pointer;
-  border: none !important;
-  font-weight: 600;
+	background-color: #fff6e6 !important;
+	color: #e69700 !important;
+	cursor: pointer;
+	border: none !important;
+	font-weight: 600;
 }
 .dropdown-arrows-blue {
-  background-color: #ecf5fc !important;
-  color: #4299e1 !important;
-  cursor: pointer;
-  border: none !important;
-  font-weight: 600;
+	background-color: #ecf5fc !important;
+	color: #4299e1 !important;
+	cursor: pointer;
+	border: none !important;
+	font-weight: 600;
 }
 .dropdown-arrows-red-primary {
-  background-color: #fdeaec !important;
-  color: #d6293b !important;
-  cursor: pointer;
-  border: none !important;
-  font-weight: 600;
+	background-color: #fdeaec !important;
+	color: #d6293b !important;
+	cursor: pointer;
+	border: none !important;
+	font-weight: 600;
 }
 .dropdown-arrows-red-secondary {
-  background-color: #ffe2e6 !important;
-  color: #f65464 !important;
-  cursor: pointer;
-  border: none !important;
+	background-color: #ffe2e6 !important;
+	color: #f65464 !important;
+	cursor: pointer;
+	border: none !important;
 }
 
 .remove-icon-default {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
 }
 
 .error-text {
-  color: red;
-  font-weight: 600;
-  margin-bottom: 0;
-  margin-top: 1rem;
+	color: red;
+	font-weight: 600;
+	margin-bottom: 0;
+	margin-top: 1rem;
 }
 
 .react-datepicker-popper {
-  z-index: 2 !important;
+	z-index: 2 !important;
 }
 .image-view img {
-  width: 100%;
+	width: 100%;
 }
 
 .bg-blue-primary {
-  background-color: #215480 !important;
+	background-color: #215480 !important;
 }
 .bg-blue-secondary {
-  background-color: #4299e1 !important;
+	background-color: #4299e1 !important;
 }
 .bg-blue-tertiary {
-  background-color: #e1f0ff !important;
+	background-color: #e1f0ff !important;
 }
 .bg-blue-dark {
-  background-color: #357ab4 !important;
+	background-color: #357ab4 !important;
 }
 .bg-blue-extras {
-  background-color: #4cbde2 !important;
+	background-color: #4cbde2 !important;
 }
 .bg-yellow-primary {
-  background-color: #ffa800;
+	background-color: #ffa800;
 }
 .bg-red-primary {
-  background-color: #ee2d41;
+	background-color: #ee2d41;
 }
 .bg-red-secondary {
-  background-color: #ffe2e6;
+	background-color: #ffe2e6;
 }
 .bg-red-tertiary {
-  background-color: #ffa8a6;
+	background-color: #ffa8a6;
 }
 .bg-green-primary {
-  background-color: #04aa77;
+	background-color: #04aa77;
 }
 .bg-neutral {
-  background-color: #f2f7fc;
+	background-color: #f2f7fc;
 }
 
 .rounded-full {
-  border-radius: 30px;
+	border-radius: 30px;
 }
 .rounded-small {
-  border-radius: 6px;
+	border-radius: 6px;
 }
 
 .text-white {
-  color: white !important;
+	color: white !important;
 }
 .text-blue-primary {
-  color: #215480 !important;
+	color: #215480 !important;
 }
 .text-blue-secondary {
-  color: #4299e1 !important;
+	color: #4299e1 !important;
 }
 .text-blue-thirty {
-  color: #464e5f !important;
+	color: #464e5f !important;
 }
 .text-gray-primary {
-  color: #adb5bd !important;
+	color: #adb5bd !important;
 }
 .text-gray-secondary {
-  color: #80808f !important;
+	color: #80808f !important;
 }
 .text-red-secondary {
-  color: #ffe2e6 !important;
+	color: #ffe2e6 !important;
 }
 .text-red-tertiary {
-  color: #ffa8a6 !important;
+	color: #ffa8a6 !important;
 }
 
 .fw-400 {
-  font-weight: 400;
+	font-weight: 400;
 }
 .fw-500 {
-  font-weight: 500;
+	font-weight: 500;
 }
 .fw-600 {
-  font-weight: 600 !important;
+	font-weight: 600 !important;
 }
 .fw-700 {
-  font-weight: 700;
+	font-weight: 700;
 }
 
 .fz-9 {
-  font-size: 9px;
+	font-size: 9px;
 }
 .fz-10 {
-  font-size: 10px;
+	font-size: 10px;
 }
 .fz-11 {
-  font-size: 11px;
+	font-size: 11px;
 }
 .fz-32 {
-  font-size: 32px;
+	font-size: 32px;
 }
 .fz-36 {
-  font-size: 36px;
+	font-size: 36px;
 }
 .fz-12 {
-  font-size: 12px;
+	font-size: 12px;
 }
 .fz-13 {
-  font-size: 13px;
+	font-size: 13px;
 }
 .fz-14 {
-  font-size: 14px !important;
+	font-size: 14px !important;
 }
 .fz-16 {
-  font-size: 16px !important;
+	font-size: 16px !important;
 }
 .fz-18 {
-  font-size: 18px !important;
+	font-size: 18px !important;
 }
 .fz-20 {
-  font-size: 20px !important;
+	font-size: 20px !important;
 }
 .fz-24 {
-  font-size: 24px;
+	font-size: 24px;
 }
 .fz-40 {
-  font-size: 40px;
+	font-size: 40px;
 }
 
 .br-12 {
-  border-radius: 12px;
+	border-radius: 12px;
 }
 .br-5 {
-  border-radius: 5px;
+	border-radius: 5px;
 }
 .br-20 {
-  border-radius: 20px;
+	border-radius: 20px;
 }
 .br-30 {
-  border-radius: 30px;
+	border-radius: 30px;
 }
 
 .border-blue-primary {
-  border: 1px solid #215480 !important;
+	border: 1px solid #215480 !important;
 }
 .border-blue-secondary {
-  border: 1px solid #007cff !important;
+	border: 1px solid #007cff !important;
 }
 
 .btn-rounded-full {
-  display: flex;
-  align-items: center;
-  border-radius: 30px;
-  padding: 12px 32px;
-  font-weight: 600;
+	display: flex;
+	align-items: center;
+	border-radius: 30px;
+	padding: 12px 32px;
+	font-weight: 600;
 }
 
 .btn-link-action {
-  display: flex;
-  align-items: center;
-  border-radius: 8px;
-  padding: 8px 8px;
-  max-width: max-content;
+	display: flex;
+	align-items: center;
+	border-radius: 8px;
+	padding: 8px 8px;
+	max-width: max-content;
 }
 .w-max-content {
-  width: max-content;
+	width: max-content;
 }
 .form-date-picker .react-datepicker-wrapper {
-  width: 100%;
+	width: 100%;
 }
 .shadow-image-form {
-  background: #ffffff;
-  box-shadow: 0px 0px 12px rgba(31, 31, 31, 0.1);
-  border-radius: 8px;
-  margin: 20px 0;
+	background: #ffffff;
+	box-shadow: 0px 0px 12px rgba(31, 31, 31, 0.1);
+	border-radius: 8px;
+	margin: 20px 0;
 }
 
 .icon-plus {
-  margin-left: -30px;
-  margin-top: -30px;
-  cursor: pointer;
+	margin-left: -30px;
+	margin-top: -30px;
+	cursor: pointer;
 }
 .transition-animate {
-  transition: transform 0.3s;
+	transition: transform 0.3s;
 }
 
 .image-card-1 {
-  width: 100%;
-  height: 100%;
+	width: 100%;
+	height: 100%;
 }
 .cardss {
-  width: 100px;
-  height: 100px;
-  background-color: transparent;
-  margin: 5px;
-  cursor: move;
-  position: absolute;
-  z-index: 99;
+	width: 100px;
+	height: 100px;
+	background-color: transparent;
+	margin: 5px;
+	cursor: move;
+	position: absolute;
+	z-index: 99;
 }
 
 .listDTS:hover {
-  transition: 0.2s;
-  background: #ecf5fc;
-  cursor: pointer;
+	transition: 0.2s;
+	background: #ecf5fc;
+	cursor: pointer;
+}
+.fz-16-responsive {
+	font-size: 16px !important;
+}
+
+@media (max-width: 767px) {
+	.fz-16-responsive {
+		font-size: 10px !important;
+	}
 }
