Fix env on component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,7 @@ a {
 
 mark { 
     background-color: #007CFF !important;
-    color: black;
+    color: white;
 }
 
 .aside-menu .menu-nav > .menu-item > .menu-heading .menu-text,
