--- a/user-component-new/content/home/faq/faq.module.css
+++ b/user-component-new/content/home/faq/faq.module.css
@@ -16,3 +16,8 @@
 .detailFaq a {
     color:#007CFF !important;
 }
+
+.btn_white {
+    background-color: white !important; 
+    border: none !important;
+}
