--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,22 @@ mark {
     color: white;
 }
 
+.accordion-button {
+	background-color: white !important;
+	border: none !important;
+	/* -webkit-box-flex: 0;
+	-ms-flex: 0 0 100%;
+	flex: 0 0 100%;
+	max-width: 100%;
+	-webkit-box-orient: horizontal !important;
+	-webkit-box-direction: normal !important;
+	-ms-flex-direction: row !important;
+	flex-direction: row !important;
+	-webkit-box-pack: justify !important;
+  	-ms-flex-pack: justify !important;
+  	justify-content: space-between !important; */
+}
+
 .aside-menu .menu-nav > .menu-item > .menu-heading .menu-text,
 .aside-menu .menu-nav > .menu-item > .menu-link .menu-text {
 	font-weight: 500 !important;
